# SO1_2S2024_202110531

./: MOK.der  MOK.priv  README.md
ht1/: readme.md
ht1/go-server/: main.go
ht1/python-locusmint/: locustfile.py
ht1/yaml/: deploy.sh  go-deployment.yml  go-service.yml  ingress.yml  namespace.yml
proyecto1/: .gitignore  project.sh
proyecto1/DockerImage1/: main.js  package.json
proyecto1/DockerImage2/: package.json
proyecto1/DockerImage3/: main.js  package.json
proyecto1/DockerImage4/: main.js  package.json
proyecto1/crates/rust_module/: Cargo.toml
proyecto1/crates/rust_module/server/: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  main.py  requirements.txt
proyecto1/crates/rust_module/server/graphs/: images.txt
proyecto1/crates/rust_module/server/models/: cpu.py  process.py
proyecto1/crates/rust_module/src/: main.rs
proyecto1/docs/: tech.md  user.md
proyecto1/mks/: Makefile  sysinfo_202110531.c
proyecto1/rustModule/: main.rs
proyecto2/: .gitignore  extra.txt  go.mod  readme.md
proyecto2/go-loser-consumer/: Dockerfile  go.mod  go.sum  main.go
proyecto2/go-server/: Dockerfile  go.mod  (+1 more)
proyecto2/go-server-box/: Dockerfile  go.mod  main.go
proyecto2/go-server-run/: Dockerfile  go.mod  go.sum  main.go
proyecto2/go-server-swim/: Dockerfile  go.mod  go.sum  main.go
proyecto2/rust-server/: .dockerignore  Cargo.toml  Dockerfile  build.rs
proyecto2/rust-server/proto/: athlete.proto
proyecto2/rust-server/src/: main.rs
tare3/: Cargo.toml  containers.sh  readme.md
tarea1/: Makefile  homework.c
tarea2/: hw.sh  readme.md
(+53 files in other folders)
