[package]
name = "rust-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rust-server"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocket = { version = "0.5.0-rc.3", features = ["json"]}
tonic = "0.12"
tokio = { version = "1.0", features = ["full"] }
prost = "0.13.3"

[build-dependencies]
tonic-build = "0.12"