[package]
name = "rust_module"
version = "1.0.0"
edition = "2021"

[dependencies]
ctrlc = "3.3"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

[lib]
name = "rust_module"
path = "src/lib.rs"

[[bin]]
name = "rust_module"
path = "src/main.rs"